# mcplint

./: .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/action/: action.yml  comment.sh  install.sh  run.sh
.github/brew/: mcplint.rb.template
.github/workflows/: action-test.yml  ci.yml  mcplint.yml  npm-test.yml  release-cut.yml  release.yml  update-brew.yml
crates/mcplint_cli/: Cargo.toml  README.md
crates/mcplint_cli/src/: exit_codes.rs  main.rs
crates/mcplint_cli/src/commands/: baseline.rs  diff.rs  export.rs  mod.rs  rules.rs  scan.rs
crates/mcplint_cli/tests/: adapter_test.rs  baseline_integration.rs  custom_rule_test.rs  exit_code_test.rs  fix_test.rs  fixture_secret_guard.rs  integration_test.rs  realistic_fixture_scan.rs  snapshot_test.rs
crates/mcplint_cli/tests/snapshots/: snapshot_test__explain_mg003.snap  snapshot_test__scan_markdown.snap  snapshot_test__scan_text.snap
crates/mcplint_core/: Cargo.toml  README.md
crates/mcplint_core/src/: baseline.rs  config.rs  custom_rule.rs  finding.rs  findings_baseline.rs  fix.rs  json_locator.rs  lib.rs  mcp_schema.rs  rule.rs  scan_context.rs
crates/mcplint_core/src/adapters/: claude_desktop.rs  cline.rs  continue_dev.rs  cursor.rs  generic.rs  mod.rs  vscode.rs  windsurf.rs  zed.rs
crates/mcplint_mcp_server/: Cargo.toml  README.md
crates/mcplint_mcp_server/src/: lib.rs  live_scanner.rs  server.rs
crates/mcplint_mcp_server/tests/: mcp_server_test.rs
crates/mcplint_mcp_server/tests/snapshots/: mcp_server_test__explain_mg001.snap  mcp_server_test__explain_mg005.snap  mcp_server_test__list_rules.snap  mcp_server_test__scan_vulnerable_findings.snap
crates/mcplint_report/: Cargo.toml  README.md
crates/mcplint_report/src/: json.rs  lib.rs  markdown.rs  sarif.rs  text.rs
crates/mcplint_rules/: Cargo.toml  README.md
crates/mcplint_rules/src/: lib.rs  mg001_unbounded_string.rs  mg002_over_permissioning.rs  mg003_escalation_chains.rs  mg004_filesystem_scope.rs  mg005_weak_auth.rs  mg006_metadata_leakage.rs  mg007_broad_scope.rs  mg008_transport_security.rs  mg009_env_leakage.rs
crates/mcplint_rules/tests/: false_positive_tests.rs
docs/: export-format.md  fingerprints.md
examples/: README.md
examples/01-startup-ai-assistant/: claude_desktop_config.json
examples/02-data-pipeline-agent/: mcp.config.json
examples/03-customer-support-bot/.cursor/: mcp.json
examples/05-research-agent/: research.tools.json
examples/06-multi-tenant-saas/: platform.config.json
examples/real-world-agents/: README.md
examples/real-world-agents/01-code-review-agent/: agent.py  mcp_servers.json
examples/real-world-agents/02-data-analyst-agent/: agent.py  claude_desktop_config.json
examples/real-world-agents/03-incident-responder/: agent.py
examples/real-world-agents/03-incident-responder/.cursor/: mcp.json
examples/real-world-agents/04-rag-customer-support/: agent.py  mcp_config.json
npm/: README.md  install.js  package.json
tests/fixtures/: multi_server.config.json  safe.tools.json  vulnerable.tools.json
tests/fixtures/baseline/: base_config.json  drifted_config.json
tests/fixtures/claude_desktop/: claude_desktop_config.json
tests/fixtures/claude_desktop/minimal/: claude_desktop_config.json
tests/fixtures/cline/: disabled_server.json  safe_mcp_settings.json  unsafe_mcp_settings.json
tests/fixtures/continue_dev/.continue/: config.yaml
tests/fixtures/continue_dev/.continue/mcpServers/: github.json  secrets.yaml  sqlite.yaml
tests/fixtures/continue_dev_unsafe/.continue/: config.yaml
tests/fixtures/cursor/.cursor/: mcp.json
tests/fixtures/cursor/unsafe/.cursor/: mcp.json
tests/fixtures/custom_rules/: block_exec_tools.yaml  env_secrets.yaml  prod_transport.yaml  require_auth.yaml  test_config.json  unconstrained_strings.yaml
tests/fixtures/diff/: baseline.tools.json  evolved.tools.json
tests/fixtures/fix/: already_fixed.tools.json  mg001_before.tools.json  mg004_before.tools.json  mg005_before.json  mg006_before.tools.json  mixed_before.tools.json
tests/fixtures/generic/minimal/: mcp.json
tests/fixtures/mg003_cross_server/safe-no-chain/: mcp.config.json
tests/fixtures/mg003_cross_server/three-servers-full-chain/: mcp.config.json
tests/fixtures/mg003_cross_server/two-servers-exfil/: mcp.config.json
tests/fixtures/native/: sample.config.json  sample.tools.json
tests/fixtures/realistic/: README.md
tests/fixtures/realistic/claude/: developer_typical.json  docker_setup.json  insecure_common.json  large_org_heavy.json
tests/fixtures/realistic/cursor/: typical.json
tests/fixtures/rules/: all_safe.json  false_positives.json  mg007_broad_scope.tools.json  mg008_transport.json  mg009_env_leakage.json  true_positives.json
tests/fixtures/vscode/: safe_vscode_mcp.json  settings_wrapped.json  unsafe_vscode_mcp.json
tests/fixtures/windsurf/: safe_mcp_config.json  unsafe_mcp_config.json
tests/fixtures/with_config/: .mcp-guard.toml
tests/fixtures/zed/: settings.json
tests/fixtures/zed_comments/: settings.json
tests/fixtures/zed_no_mcp/: settings.json
tests/fixtures/zed_unsafe/: settings.json
