[package]
name = "mcplint-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compiler-style static security analyzer for MCP (Model Context Protocol) configurations"
readme = "README.md"
keywords = ["mcp", "security", "static-analysis", "sarif", "agentic-ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mcplint"
path = "src/main.rs"

[dependencies]
mcplint-core = { path = "../mcplint_core", version = "0.1.0" }
mcplint-rules = { path = "../mcplint_rules", version = "0.1.0" }
mcplint-report = { path = "../mcplint_report", version = "0.1.0" }
mcplint-mcp-server = { path = "../mcplint_mcp_server", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
regex = "1"
tempfile = "3"
mcplint-core = { path = "../mcplint_core", version = "0.1.0" }
mcplint-rules = { path = "../mcplint_rules", version = "0.1.0" }
mcplint-report = { path = "../mcplint_report", version = "0.1.0" }
serde_json = "1"
