[package]
name = "mcplint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data models, adapters, and analysis framework for mcplint"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
sha2 = "0.10"
regex = "1"

[dev-dependencies]
tempfile = "3"
