[package]
name = "mcplint-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Output formatters (text, JSON, Markdown, SARIF) for mcplint"

[dependencies]
mcplint-core = { path = "../mcplint_core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
