[package]
name = "mcplint-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in security rules for mcplint"
readme = "README.md"

[dependencies]
mcplint-core = { path = "../mcplint_core", version = "0.1.2" }
serde_json = "1"
regex = "1"
